# claire

./: .env.example  .env.venture.example  .gitignore  AGENTS.md  ARCHITECTURE.md  ARCHIVE_README.md  ARE_SERVER.py  ARE_SERVER_LOCKED.py  CLAIRE_AZURE_FORENSIC_TECHNICAL_REPORT.md  CLAIRE_CANONICAL_DOCUMENT_RECOMMENDATIONS.md  CLAIRE_CAPABILITY_MATRIX.md  CLAIRE_CONTINUITY_SENTIMENT_BOOTSTRAP.md  CLAIRE_CONVERSATION_CONTRACT.md  CLAIRE_CURRENT_ARCHITECTURE_GAP_REPORT.md  CLAIRE_FEATURE_CERTIFICATION.md  CLAIRE_RUNTIME_STATUS.md  CLAIRE_SYSTEMS_ACCOUNT_MAP.md  CLAIRE_SYSTEMS_DUPLICATION_ANALYSIS.md  CLAIRE_SYSTEMS_MASTER_REPOSITORY_INVENTORY.md  CLAIRE_SYSTEMS_MIGRATION_PLAN.md  CLAIRE_SYSTEMS_ORG_PROFILE_RECOMMENDATION.md  CLAIRE_SYSTEMS_TARGET_STRUCTURE.md  CODEX_CLAIRE_GYRO_PHASE_ONE_CHANGE_PLAN.md  CODEX_CLAIRE_GYRO_PHASE_ONE_IMPLEMENTATION_LOG.md  CODEX_CLAIRE_GYRO_PHASE_ONE_ROLLBACK.md  CODEX_CLAIRE_GYRO_PHASE_ONE_TEST_PLAN.md  CODEX_CLAIRE_GYRO_PHASE_PLAN.md  CODEX_CLAIRE_GYRO_PHASE_ZERO_AUDIT.md  CODE_INVENTORY.csv  CONTINUITY_ARE_CURRENT_STATE.md  CONTINUITY_UPGRADE_CANDIDATES.md  DEMO_SCRIPT.md  DEPLOYMENT.md  DRIVE_ARCHITECTURE_INVENTORY.md  DRIVE_COMPONENT_RECOVERY_MAP.md  DRIVE_DUPLICATION_ANALYSIS.md  Dockerfile  Dockerfile.venture  EVACUATION_MANIFEST.txt  FIRST_REVENUE_PLAN.md  (+155 more)
apex/: Claire's Odyssey   apex_server.py  investor_primary.py  investor_scout.py
are_hf_demo/: README.md  app.py  are_store.py
benchmarks/: are_truth_spine_sustained_load.py
claire/: __init__.py
claire_are/: __init__.py  api.py  config.py  core.py  diode_guard.py  gateway.py  (+4 more)
(+232 files in other folders)
